Lifecycle improvements for discovery client and ribbon load balancing